--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: HCA Tools and Technology Standards
-site_url: https://james-willett.github.io/mkdocs-material-youtube-tutorial/
+site_url: https://sourish33.github.io/mk-docs/
 theme:
   name: material
   features:
